fixing css for my image, not showing up the same on my computer as on github

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ header h1 {
     
 }
 
-header img {
+header h1 img {
     border-radius: 50%;
     width: 50px;
 }
